--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.3.10",
-    "mocha": "^10.2.0"
+    "coveralls": "^3.1.1",
+    "mocha": "^10.2.0",
+    "mocha-lcov-reporter": "^1.3.0"
   }
 }
