--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,8 +33,8 @@ jobs:
     - name: npm install
       run: npm install
 
-    - name: Unit tests
-      run: make test-coverage
+    - name: Test ${{ matrix.test_number }}
+      run: make test-coverage-${{ matrix.test_number }}
     - name: Coveralls Parallel
       uses: coverallsapp/github-action@v2
       with:
