--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,24 +29,13 @@ jobs:
         cache: 'npm'
 
     - run: npm ci
+    - run: npm run build --if-present
 
-    - name: npm install, make test-coverage
-      run: |
-        npm install
-        make test-coverage
-
+    # finally run the tests
+    - run: npm run test-coverage
+    
+    # Save coverage report in Coveralls
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
-        github-token: ${{ secrets.OVERALLS_API }}
-        parallel: true
-
-  finish:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Coveralls Finished
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.OVERALLS_API }}
-          parallel-finished: true
+        github-token: ${{ secrets.GITHUB_TOKEN }}
