--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "mocha",
-    "test-coverage": "nyc npm run mocha && shx cat ./coverage/lcov.info | node ./bin/coveralls.js --verbose"
+    "test": "mocha --recursive --require @babel/register",
+    "test-coverage": "nyc npm test && nyc report --reporter=text-lcov"
   },
   "author": "",
   "license": "MIT",
