--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.23.5",
+    "@babel/register": "^7.22.15",
     "chai": "^4.3.10",
     "coveralls": "^3.1.1",
     "mocha": "^10.2.0",
