--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "mocha --recursive --require @babel/register",
-    "test-coverage": "nyc npm test && nyc report --reporter=text-lcov"
+    "test-coverage": "nyc npm test && nyc report --reporter=lcov"
   },
   "author": "",
   "license": "MIT",
