--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,6 +36,6 @@ jobs:
     
     # Save coverage report in Coveralls
     - name: Coveralls
-      uses: coverallsapp/github-action@master
+      uses: coverallsapp/github-action@v2
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
