Calculating the coverage fixed

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "mocha --recursive --require @babel/register",
-    "test-coverage": "nyc npm test && nyc report --reporter=text-lcov"
+    "test": "mocha",
+    "test-coverage": "c8 --reporter=lcovonly --all --exclude 'src/.internal/**' --exclude 'coverage/**' --exclude 'mochawesome-report/**' --exclude 'test/**' --exclude 'src/index.js' npm test"
   },
   "author": "",
   "license": "MIT",
@@ -29,6 +29,11 @@
     ],
     "report-dir": "./coverage",
     "all": true
+  },
+  "c8": {
+    "include": [
+      "src/*.js"
+    ]
   }
   
 
